--- a/crudeoil.ipynb
+++ b/crudeoil.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOh9RiATkqTCZmH5LddGfTH",
+      "authorship_tag": "ABX9TyPJK7I5kYXmcE8twyRVJ45V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Read relevant sheet from WB data\n",
         "url= 'https://thedocs.worldbank.org/en/doc/5d903e848db1d1b83e0ec8f744e55570-0350012021/related/CMO-Historical-Data-Monthly.xlsx'\n",
         "sheet_name = \"Monthly Prices\"\n",
         "crudeoil_raw_df = pd.read_excel(url, sheet_name=sheet_name, skiprows=6 )"
@@ -62,6 +63,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Standardize\n",
         "drop_cols = ['CRUDE_WTI','COAL_AUS', 'COAL_SAFRICA', 'NGAS_US', 'NGAS_EUR', 'NGAS_JP', 'iNATGAS','COCOA', 'COFFEE_ARABIC', 'COFFEE_ROBUS', 'TEA_AVG', 'TEA_COLOMBO','TEA_KOLKATA', 'TEA_MOMBASA', 'COCONUT_OIL', 'GRNUT', 'FISH_MEAL','GRNUT_OIL', 'PALM_OIL', 'PLMKRNL_OIL', 'SOYBEANS', 'SOYBEAN_OIL','SOYBEAN_MEAL', 'RAPESEED_OIL', 'SUNFLOWER_OIL', 'BARLEY', 'MAIZE','SORGHUM', 'RICE_05', 'RICE_25', 'RICE_A1', 'RICE_05_VNM','WHEAT_US_SRW', 'WHEAT_US_HRW', 'BANANA_EU', 'BANANA_US', 'ORANGE','BEEF', 'CHICKEN', 'LAMB', 'SHRIMP_MEX', 'SUGAR_EU', 'SUGAR_US','SUGAR_WLD', 'TOBAC_US', 'LOGS_CMR', 'LOGS_MYS', 'SAWNWD_CMR','SAWNWD_MYS', 'PLYWOOD', 'COTTON_A_INDX', 'RUBBER_TSR20','RUBBER1_MYSG', 'PHOSROCK', 'DAP', 'TSP', 'UREA_EE_BULK', 'POTASH','ALUMINUM', 'IRON_ORE', 'COPPER', 'LEAD', 'Tin', 'NICKEL', 'Zinc','GOLD', 'PLATINUM', 'SILVER']\n",
         "crudeoil_raw_df.drop(columns= drop_cols, inplace = True)\n",
         "crudeoil_raw_df[['year','month']] = crudeoil_raw_df['Unnamed: 0'].str.split('M', expand = True)\n",
@@ -380,21 +382,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Save to data\n",
+        "crudeoil_raw_df.to_csv('crudeoildataset.csv', index=False)\n"
+      ],
       "metadata": {
         "id": "BYcAPrb1ckzw"
       },
-      "execution_count": 53,
+      "execution_count": 62,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Clean Data and save as csv for public available"
-      ],
-      "metadata": {
-        "id": "upyOqRdYZpKD"
-      }
     }
   ]
 }
